Fix color showing up as blue on iphones

--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -39,6 +39,7 @@
   display: flex;
   border: 1px solid var(--dark-color-alt);
   background-color: var(--light-color);
+  color: var(--dark-color);
   padding: 5px 10px;
   font-size: 1.1rem;
   border-radius: 5px;
